--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,18 @@ services:
     volumes:
       - .:/app
     ports:
-      - "8765:8765"
+      - "8000:8000"  # Add this line
     environment:
       - PYTHONUNBUFFERED=1
-    command: python3 app.py  # Run the web server
+    command: python3 app.py
 
   sockets:
     build: .
     restart: always
     volumes:
       - .:/app
+    ports:
+      - "8765:8765"
     environment:
       - PYTHONUNBUFFERED=1
-    command: python3 sockets.py  # Run the sockets service
+    command: python3 sockets.py
