--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -8,14 +8,10 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 COPY app.py app.py
 
-RUN python -m pip install ultralytics
-
-# Copy the rest of the application files
-COPY . .
+RUN pip install -r requiremets.txt
 
 # Expose the port for the video service
 EXPOSE 8765
-EXPOSE 8000
 
 # Default command to run the video service
 CMD ["python3", "app.py"]
