--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY video/requirements.txt requirements.txt
 COPY video/sockets.py sockets.py
 
-RUN pip install -r requiremets.txt
+RUN pip install -r requirements.txt
 
 # Expose the port for the video service
 EXPOSE 8765
