--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -1,5 +1,5 @@
 # Use a Raspberry Pi OS base image
-FROM arm32v7/python:3.11-slim-buster
+FROM raspbian/stretch
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
