--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -1,8 +1,9 @@
 # Use a Raspberry Pi OS base image
-FROM raspbian/stretch
+FROM raspbian/buster
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    psmisc \
     libcamera-apps \
     libcamera-tools \
     && rm -rf /var/lib/apt/lists/*
