--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -2,7 +2,7 @@
 FROM arm32v7/python:3.11-slim-buster
 
 # Install system dependencies
-RUN sudo apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y \
     libcamera-apps \
     libcamera-tools \
     && rm -rf /var/lib/apt/lists/*
