--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -1,7 +1,13 @@
+# Use a Debian base image for ARM architecture
 FROM arm64v8/debian:bookworm
 
 # Enable noninteractive mode
 ENV DEBIAN_FRONTEND=noninteractive
+
+# Install gnupg and other necessary packages
+RUN apt-get update && apt-get install -y \
+    gnupg \
+    && rm -rf /var/lib/apt/lists/*
 
 # Add Raspberry Pi OS repo
 RUN echo "deb http://archive.raspberrypi.com/debian bookworm main" > /etc/apt/sources.list.d/raspi.list \
@@ -14,12 +20,18 @@ RUN apt-get install -y \
     libcamera-tools \
  && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Set the working directory inside the container
 WORKDIR /app
 
+# Copy the dependencies file and install requirements
 COPY video/requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application files
 COPY video/sockets.py sockets.py
 
+# Expose the port for the video service
 EXPOSE 8765
+
+# Default command to run the video service
 CMD ["python3", "sockets.py"]
