--- a/video/Dockerfile
+++ b/video/Dockerfile
@@ -8,6 +8,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y \
     gnupg \
     wget \
+    python3 \
+    python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
 # Add Raspberry Pi OS repo and fetch the GPG key
@@ -26,7 +28,7 @@ WORKDIR /app
 
 # Copy the dependencies file and install requirements
 COPY video/requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN python3 -m pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application files
 COPY video/sockets.py sockets.py
