--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,14 +6,14 @@ WORKDIR /app
 
 # Copy the dependencies file and install requirements
 COPY web/requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application files
 COPY web/app.py app.py
-COPY web/templates/index.html templates/index.html
+COPY web/templates templates
 
-RUN pip install -r requirements.txt
-
-# Expose the port for the video service
+# Expose the port for the web service
 EXPOSE 8000
 
-# Default command to run the video service
+# Default command to run the web service
 CMD ["python3", "app.py"]
-
